--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-sans: var(--font-sans), ui-sans-serif, system-ui, -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   --color-background: var(--background);
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
@@ -118,5 +121,31 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  h1 {
+    @apply text-4xl md:text-6xl xl:text-7xl font-bold;
+  }
+  h2 {
+    @apply text-3xl lg:text-3xl font-medium;
+  }
+  h3 {
+    @apply text-2xl lg:text-4xl font-medium;
+  }
+  a {
+    @apply hover:cursor-pointer;
+  }
+  button {
+    @apply hover:cursor-pointer bg-rose-600 hover:bg-rose-700;
+  }
+}
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
+  @media (width>= --theme(--breakpoint-sm)) {
+    max-width: none;
+  }
+  @media (width>= 1400px) {
+    max-width: 1400px;
   }
 }
