Landing Page Setup

--- a/app/globals.css
+++ b/app/globals.css
@@ -135,8 +135,23 @@
     @apply hover:cursor-pointer;
   }
   button {
-    @apply hover:cursor-pointer bg-rose-600 hover:bg-rose-700;
+    @apply cursor-pointer bg-indigo-600 hover:bg-indigo-700;
   }
+}
+@keyframes gradient-x {
+  0%,
+  100% {
+    background-size: 200% 100%;
+    background-position: left center;
+  }
+  50% {
+    background-size: 200% 100%;
+    background-position: right center;
+  }
+}
+
+.animate-gradient-x {
+  animation: gradient-x 3s ease infinite;
 }
 
 @utility container {
